--- a/package.json
+++ b/package.json
@@ -1,23 +1,16 @@
 {
-  "name": "webgl-hero",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "name": "healthconnect-platform",
+  "version": "1.0.0",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "gsap": "^3.14.2",
-    "three": "^0.182.0",
-    "vue": "^3.5.24"
+    "install-all": "npm install && cd client && npm install && cd ../server && npm install",
+    "dev:client": "cd client && npm run dev",
+    "dev:server": "cd server && npm run dev",
+    "dev": "concurrently \"npm run dev:server\" \"npm run dev:client\"",
+    "build": "cd client && npm run build",
+    "start": "cd server && npm start",
+    "test": "echo \"No tests yet\" && exit 0"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^6.0.1",
-    "vite": "npm:rolldown-vite@7.2.5"
-  },
-  "overrides": {
-    "vite": "npm:rolldown-vite@7.2.5"
+    "concurrently": "^8.0.0"
   }
 }
